package BuildPattern;

public class Mode {
    private String caidang;
    private String bofanglibiao;
    private String zhuchuangkou;
    private String kongzhitiaol;
    private String shouchangliebiao;

    public String getCaidang() {
        return caidang;
    }

    public void setCaidang(String caidang) {
        this.caidang = caidang;
    }

    public String getBofanglibiao() {
        return bofanglibiao;
    }

    public void setBofanglibiao(String bofanglibiao) {
        this.bofanglibiao = bofanglibiao;
    }

    public String getZhuchuangkou() {
        return zhuchuangkou;
    }

    public void setZhuchuangkou(String zhuchuangkou) {
        this.zhuchuangkou = zhuchuangkou;
    }

    public String getKongzhitiaol() {
        return kongzhitiaol;
    }

    public void setKongzhitiaol(String kongzhitiaol) {
        this.kongzhitiaol = kongzhitiaol;
    }

    public String getShouchangliebiao() {
        return shouchangliebiao;
    }

    public void setShouchangliebiao(String shouchangliebiao) {
        this.shouchangliebiao = shouchangliebiao;
    }
}
